feat: api,client

--- a/.env
+++ b/.env
@@ -19,4 +19,9 @@ PHP_XDEBUG_CLIENT_HOST=host.docker.internal
 # NGINX
 ########################################################################
 NGINX_PORT=8080
-NGINX_SYMFONY_SERVER_NAME=symfony.localhost
+
+########################################################################
+# RABBITMQ
+########################################################################
+RABBITMQ_USER=user
+RABBITMQ_PASSWORD=password
