--- a/api/.env
+++ b/api/.env
@@ -1,4 +1,10 @@
 APP_ENV=dev
 APP_SECRET=0792230fba2637302d834b241883ad39
 DATABASE_URL="mysql://root:root@db/symfony?serverVersion=8&charset=utf8mb4"
-API_FRUITES="https://fruityvice.com/api/fruit/all"
+API_FRUITS="https://fruityvice.com/api/fruit/all"
+###> symfony/messenger ###
+# Choose one of the transports below
+RABBITMQ_TRANSPORT_DSN=amqp://user:password@rabbitmq:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+# MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+###< symfony/messenger ###
