--- a/api/composer.json
+++ b/api/composer.json
@@ -11,16 +11,19 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.14",
         "guzzlehttp/guzzle": "^7.5",
+        "symfony/amqp-messenger": "6.2.*",
         "symfony/console": "6.2.*",
         "symfony/dotenv": "6.2.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.2.*",
+        "symfony/messenger": "6.2.*",
         "symfony/runtime": "6.2.*",
         "symfony/yaml": "6.2.*"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "phpunit/phpunit": "^9.5",
+        "squizlabs/php_codesniffer": "^3.7",
         "symfony/browser-kit": "6.2.*",
         "symfony/css-selector": "6.2.*",
         "symfony/maker-bundle": "^1.48",
@@ -63,6 +66,10 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "autofix": [
+            "./vendor/bin/phpcbf --standard=PSR12 src/",
+            "./vendor/bin/phpcbf --standard=PSR12 tests/"
         ]
     },
     "conflict": {
